--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(images/gtajpg.jpg);
+  background-image: url(../images/gtajpg.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
